[package]
name = "timestamp-source"
authors = ["Stanislav Kusovskyi <kusovsky95@gmail.com>"]
edition = "2021"
description = "Timestamp source library provides simple traits for handling timestamps."
repository = "https://github.com/kusstas/timestamp-source"
documentation = "https://docs.rs/crate/timestamp-source"
categories = ["no-std"]
keywords = ["duration", "elapsed", "timer", "time", "timestamp"]
version = "0.1.3"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "^0.9.4"
